--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/s3-request-presigner": "^3.749.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-hover-card": "^1.1.6",
@@ -37,7 +38,6 @@
     "next-themes": "^0.4.4",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
-    "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
