--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
-    "firebase-admin": "^13.2.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
@@ -46,6 +46,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "util": "^0.12.5"
