--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^11.6.0",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.4.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.4",
@@ -49,7 +50,8 @@
     "sharp": "^0.34.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
