--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "firebase": "^11.6.0",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.4.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
