--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@shadcn/ui": "^0.0.4",
+    "@vis.gl/react-google-maps": "^1.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -39,7 +40,6 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
-    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.4",
@@ -49,7 +49,6 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0",
     "recharts": "^2.15.3",
     "sharp": "^0.34.2",
     "tailwind-merge": "^3.0.1",
